--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:icon="@drawable/ic_settings"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:icon="@drawable/ic_settings"
+        android:title="@string/action_connect"
+        android:id="@+id/action_connect"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:icon="@drawable/ic_settings"
+        android:title="@string/action_report"
+        android:id="@+id/action_report"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:icon="@drawable/ic_settings"
+        android:title="@string/action_recent_uploads"
+        android:id="@+id/action_recent_uploads"
+        app:showAsAction="ifRoom"/>
+    <item
+        android:icon="@drawable/ic_settings"
         android:title="@string/action_settings"
-        android:id="@+id/ic_settings"/>
+        android:id="@+id/action_settings"
+        app:showAsAction="ifRoom"/>
 </menu>
