--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00bcd4</color>
-    <color name="colorPrimaryDark">#00838f</color>
-    <color name="colorAccent">#84ffff</color>
+    <color name="colorPrimary">#673ab7</color>
+    <color name="colorPrimaryDark">#512da8</color>
+    <color name="colorAccent">#ede7f6</color>
     <color name="toolbar_background">@color/colorPrimary</color>
     <color name="tab_indicator">@color/colorAccent</color>
 </resources>
