--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="layout_padding">16dp</dimen>
+    <dimen name="login_activity_horizontal_margin">@dimen/layout_padding</dimen>
+    <dimen name="login_activity_vertical_margin">@dimen/layout_padding</dimen>
 </resources>
