--- a/app/src/main/res/layout/activity_fake.xml
+++ b/app/src/main/res/layout/activity_fake.xml
@@ -4,5 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <include
+        layout="@layout/app_bar_default"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
