--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#ede7f6</color>
     <color name="toolbar_background">@color/colorPrimary</color>
     <color name="tab_indicator">@color/colorAccent</color>
+
+    <color name="fakeColorPrimary">#e91e63</color>
+    <color name="fakeColorDark">#c2185b</color>
+    <color name="fakeColorAccent">#ff5252</color>
+    <color name="fake_toolbar_background">@color/fakeColorPrimary</color>
+
 </resources>
