--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="Fake.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
+    <style name="Base.Fake.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/fakeColorPrimary</item>
+        <item name="colorPrimaryDark">@color/fakeColorDark</item>
+        <item name="colorAccent">@color/fakeColorAccent</item>
+    </style>
     <style name="AppTheme" parent="Base.AppTheme"/>
     <style name="Base.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
     <style name="AppTheme.NoActionBar" parent="Base.AppTheme.NoActionBar"/>
