--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,14 +7,18 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="Fake.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
+    <style name="Fake.AppTheme.NoActionBar" parent="Base.Fake.AppTheme.NoActionBar"/>
     <style name="Base.Fake.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/fakeColorPrimary</item>
         <item name="colorPrimaryDark">@color/fakeColorDark</item>
         <item name="colorAccent">@color/fakeColorAccent</item>
     </style>
     <style name="AppTheme" parent="Base.AppTheme"/>
-    <style name="Base.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
+    <style name="Base.AppTheme.NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
     <style name="AppTheme.NoActionBar" parent="Base.AppTheme.NoActionBar"/>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
