--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,8 @@
 <resources>
-    <style name="AppTheme" parent="AppTheme">
+    <style name="Fake.AppTheme.NoActionBar" parent="Base.Fake.AppTheme.NoActionBar"/>
+    <style name="AppTheme" parent="Base.AppTheme">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
-    <style name="AppTheme.NoActionBar" parent="Base.AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
+    <style name="AppTheme.NoActionBar" parent="Base.AppTheme.NoActionBar"/>
 </resources>
