--- a/app/src/main/res/layout/fake_app_bar_default.xml
+++ b/app/src/main/res/layout/fake_app_bar_default.xml
@@ -4,10 +4,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:theme="@style/Fake.AppTheme.AppBarOverlay">
+    android:theme="@style/AppTheme.AppBarOverlay">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        app:popupTheme="@style/Fake.AppTheme.PopupOverlay" />
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 </android.support.design.widget.AppBarLayout>
