--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,7 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <!-- TODO: -->
-</LinearLayout>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/nav_header_height"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/nav_header_background"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    android:id="@+id/layout_nav_header">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/nav_header_reveal_view"
+        android:visibility="invisible"
+        android:gravity="bottom"/>
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="@dimen/nav_header_padding"
+        android:orientation="vertical"
+        android:rowCount="3"
+        android:columnCount="2">
+        <com.rundl.gui.views.CircularImageView
+            android:id="@+id/image_profile_user"
+            android:layout_width="@dimen/nav_profile_image_size"
+            android:layout_height="@dimen/nav_profile_image_size"
+            android:transitionName="@string/transition_profile_image"
+            android:elevation="@dimen/nav_profile_image_elevation"
+            android:layout_marginBottom="@dimen/nav_header_vertical_spacing" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Ideator"
+            android:id="@+id/text_account_context"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:id="@+id/text_user_name"
+            tools:text="Patrick Shaw"
+            tools:textColor="?android:attr/textColorSecondary" />
+    </GridLayout>
+</android.support.design.widget.CoordinatorLayout>
