--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,13 +2,13 @@
 <resources>
     <color name="colorPrimary">#673ab7</color>
     <color name="colorPrimaryDark">#512da8</color>
-    <color name="colorAccent">#ede7f6</color>
+    <color name="colorAccent">#7C4DFF</color>
     <color name="toolbar_background">@color/colorPrimary</color>
     <color name="tab_indicator">@color/colorAccent</color>
+    <color name="nav_header_background">@color/colorPrimary</color>
 
     <color name="fakeColorPrimary">#e91e63</color>
     <color name="fakeColorDark">#c2185b</color>
     <color name="fakeColorAccent">#ff5252</color>
     <color name="fake_toolbar_background">@color/fakeColorPrimary</color>
-
 </resources>
