--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,9 @@
     <dimen name="app_bar_height">180dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="layout_padding">16dp</dimen>
+    <dimen name="nav_profile_image_size">64dp</dimen>
+    <dimen name="nav_profile_image_elevation">2dp</dimen>
     <dimen name="login_activity_horizontal_margin">@dimen/layout_padding</dimen>
     <dimen name="login_activity_vertical_margin">@dimen/layout_padding</dimen>
+    <dimen name="nav_header_padding">@dimen/layout_padding</dimen>
 </resources>
