Added deleted views back in

--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -21,7 +21,8 @@
         <Spinner
                 android:prompt="@string/hint_australia_state_or_territory"
                 android:id="@+id/spinner_australia_start_or_territory"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
             <EditText
                 android:hint="@string/hint_australia_state_or_territory"
                 android:id="@+id/edit_australia_state_or_territory"
