--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -20,7 +20,7 @@
         android:rowCount="3"
         android:columnCount="2">
         <com.rundl.gui.views.CircularImageView
-            android:id="@+id/image_profile_user"
+            android:id="@+id/image_profile"
             android:layout_width="@dimen/nav_profile_image_size"
             android:layout_height="@dimen/nav_profile_image_size"
             android:transitionName="@string/transition_profile_image"
@@ -33,13 +33,5 @@
             tools:text="Ideator"
             android:id="@+id/text_account_context"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:id="@+id/text_user_name"
-            tools:text="Patrick Shaw"
-            tools:textColor="?android:attr/textColorSecondary" />
     </GridLayout>
 </android.support.design.widget.CoordinatorLayout>
