--- a/app/src/main/res/layout/activity_fake.xml
+++ b/app/src/main/res/layout/activity_fake.xml
@@ -3,9 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background_2">
     <include
         layout="@layout/app_bar_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/layout_fragment_holder">
+
+    </FrameLayout>
 </LinearLayout>
