--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,18 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
+    <dimen name="card_padding_horizontal">16dp</dimen>
+    <dimen name="card_resting_elevation">2dp</dimen>
+    <dimen name="divider_height">1dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+    <dimen name="circle_size">40dp</dimen>
+
+    <dimen name="ic_no_items_text_size">80dp</dimen>
+    <dimen name="btn_raised_elevation">2dp</dimen>
+    <dimen name="_activity_subsection_indentation_padding_left">0dp</dimen>
+    <dimen name="_activity_subsection_indentation_circle_padding_left">0dp</dimen>
+    <dimen name="_activity_indented_subsection_padding_left">@dimen/layout_padding</dimen>
+    <dimen name="_activity_indented_subsection_margin_left">0dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
