--- a/app/src/main/res/layout/layout_youtube.xml
+++ b/app/src/main/res/layout/layout_youtube.xml
@@ -1,15 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardElevation="@dimen/card_resting_elevation"
+    app:contentPadding="@dimen/layout_padding"
+    app:cardBackgroundColor="@color/background_1">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView android:id="@+id/text_date"
         android:gravity="center_horizontal"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+        android:text="rawrwar"
+        android:layout_marginBottom="8dp" />
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
         android:layout_gravity="center"
-        android:id="@+id/image_video"/>
+        android:id="@+id/image_video"
+        android:src="@drawable/video_placeholder"
+        android:scaleType="centerCrop" />
 </LinearLayout>
+    </android.support.v7.widget.CardView>
